# egl-fota-demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  build.sh  project.sh
.github/workflows/: build.yml
apps/: CMakeLists.txt
apps/blink/: CMakeLists.txt  app_config.cmake  egl_config.cmake  main.c
apps/boot/: CMakeLists.txt  app_config.cmake  boot.c  boot.h  boot_mgr.c  boot_mgr.h  egl_config.cmake  fota.c  fota.h  fota_mgr.c  fota_mgr.h  main.c
apps/boot/radio/: CMakeLists.txt  radio.c  sx1232-Hal.c  sx1232-Hal.h  sx1232-Misc.c  sx1232-Misc.h  sx1232.c  sx1232.h
apps/boot2/: CMakeLists.txt  app_config.cmake  boot_mgr.c  boot_mgr.h  egl_config.cmake  fota_mgr.c  fota_mgr.h  main.c
apps/common/: CMakeLists.txt  protocol.c  protocol.h
apps/main/: CMakeLists.txt  app_config.cmake  egl_config.cmake  main.c  rfm66_test.c  rfm69_test.c  rfm_test.c  rfm_test.h
apps/radio_switch/: CMakeLists.txt  app_config.cmake  egl_config.cmake  fota.c  fota.h  main.c  protocol.h  radio.c  radio.h  switch.c  switch.h
apps/rfm_test/: CMakeLists.txt  app_config.cmake  main.c  rfm66_test.c  rfm69_test.c
egl/: CMakeLists.txt  egl_lib.h
egl/block/: egl_block.h
egl/crc/: egl_crc.h
egl/interface/: egl_interface.c  egl_interface.h
egl/pio/: egl_pio.c  egl_pio.h
egl/plat/: egl_plat.c  egl_plat.h
egl/result/: egl_result.c  egl_result.h
egl/timer/: egl_timer.c  egl_timer.h
egl/trace/: CMakeLists.txt  egl_trace.c  egl_trace.h
images/: fota_manager_flow.drawio  general_structure.drawio  slot_structure.drawio  solution_structure.drawio
plat/: CMakeLists.txt
plat/common/: common.cmake  meta.py
plat/stm32l073-nucleo/: CMakeLists.txt  flags.cmake  isr.c  lib.s  plat_config.cmake  startup_stm32l073xx.s
plat/stm32l073-nucleo/config/: tx_user.h
plat/stm32l073-nucleo/crc/: CMakeLists.txt  plat_crc.c  plat_crc.h
plat/stm32l073-nucleo/flash/: plat_flash.c  plat_flash.h
plat/stm32l073-nucleo/info/: CMakeLists.txt  plat_info.c.in  plat_info.h
plat/stm32l073-nucleo/linker/: stm32l073rztx.ld.in  stm32l073rztx_a.ld  stm32l073rztx_b.ld  stm32l073rztx_base.ld  stm32l073rztx_boot.ld
plat/stm32l073-nucleo/ozone/: osone_radio_switch_rfm66_a.jdebug  osone_radio_switch_rfm69_a.jdebug
plat/stm32l073-nucleo/plat/: CMakeLists.txt  plat.c  plat.h
plat/stm32l073-nucleo/radio/: CMakeLists.txt  plat_radio_iface.c  plat_radio_iface.h  plat_radio_iface_rfm66.c  plat_radio_iface_rfm69.c  plat_radio_rx_led.c  plat_radio_rx_led.h  plat_radio_sw1.c  plat_radio_sw1.h  plat_radio_sw2.c  plat_radio_sw2.h  plat_radio_tx_led.c  plat_radio_tx_led.h
plat/stm32l073-nucleo/radio/rfm/: CMakeLists.txt  plat_rfm.c  plat_rfm.h  plat_rfm_clock.c  plat_rfm_dio0.c  plat_rfm_dio1.c  plat_rfm_dio2.c  plat_rfm_dio3.c  plat_rfm_dio4.c  plat_rfm_dio5.c  plat_rfm_iface.c  plat_rfm_pm.c
plat/stm32l073-nucleo/radio/rfm69/: CMakeLists.txt  plat_rfm.c  plat_rfm.h  plat_rfm_dio0.c  plat_rfm_dio1.c  plat_rfm_dio2.c  plat_rfm_iface.c  plat_rfm_pm.c
plat/stm32l073-nucleo/slot/: CMakeLists.txt  slot.c.in  slot.h
plat/stm32l073-nucleo/sysclock/: CMakeLists.txt  plat_sysclock.c  plat_sysclock.h  sysclock.h
plat/stm32l073-nucleo/sysled/: CMakeLists.txt  plat_sysled.c  plat_sysled.h  sysled.h
plat/stm32l073-nucleo/syslog/: CMakeLists.txt  plat_syslog.c  plat_syslog.h  syslog.c  syslog.h
plat/stm32l073-nucleo/syspm/: CMakeLists.txt  plat_syspm.c  plat_syspm.h  syspm.h
plat/stm32l073-nucleo/system/: CMakeLists.txt  plat_system.c  plat_system.h
plat/stm32l073-nucleo/systimer/: CMakeLists.txt  plat_systimer.c  plat_systimer.h  systimer.c  systimer.h
plat/stm32l073-nucleo/usrbtn/: CMakeLists.txt  plat_usrbtn.c  plat_usrbtn.h
plat/stm32l412-nucleo/: CMakeLists.txt  debug.sh  flags.cmake  flash.sh  isr.c  meta.py  plat.c  plat.cmake  plat.h  plat_config.cmake  plat_info.c.in  plat_info.h  stm32l412rbtx_a.ld  stm32l412rbtx_b.ld  stm32l412rbtx_base.ld  stm32l412rbtx_boot.ld
plat/stm32l412-nucleo/crc/: plat_crc.c
plat/stm32l412-nucleo/flash/: CMakeLists.txt  plat_flash.c  plat_flash.h
plat/stm32l412-nucleo/iface_trace/: CMakeLists.txt  iface_trace.c  iface_trace.h
plat/stm32l412-nucleo/linker/: stm32l412rbtx.ld.in  stm32l412rbtx_a.ld  stm32l412rbtx_b.ld  stm32l412rbtx_base.ld  stm32l412rbtx_boot.ld
plat/stm32l412-nucleo/pio_led_green/: CMakeLists.txt  pio_led_green.c  pio_led_green.h
plat/stm32l412-nucleo/plat/: plat.c  plat.h
plat/stm32l412-nucleo/radio/: CMakeLists.txt  plat_radio.h  plat_rfm_dio0_pin.h  plat_rfm_dio4_pin.c  plat_rfm_dio5_pin.c  plat_rfm_dio5_pin.h  plat_rfm_iface.c  plat_rfm_nss_pin.c  plat_rfm_rx_led_pin.c  plat_rfm_rx_led_pin.h  plat_rfm_sw1_pin.c  plat_rfm_sw1_pin.h  plat_rfm_sw2_pin.c  plat_rfm_sw2_pin.h  plat_rfm_tx_led_pin.c  plat_rfm_tx_led_pin.h
plat/stm32l412-nucleo/radio/rfm69/: CMakeLists.txt  plat_rfm_dio0_pin.c  plat_rfm_dio2_pin.c  plat_rfm_dio2_pin.h  plat_rfm_dio4_pin.h  plat_rfm_iface.c  plat_rfm_iface.h  plat_rfm_nss_pin.h  plat_rfm_reset_pin.c  plat_rfm_reset_pin.h
plat/stm32l412-nucleo/slot/: slot.c.in  slot.h
plat/stm32l412-nucleo/sysclock/: plat_sysclock.c
plat/stm32l412-nucleo/sysled/: CMakeLists.txt  plat_sysled.c
plat/stm32l412-nucleo/syslog/: plat_syslog.c  plat_syslog.h
plat/stm32l412-nucleo/syspm/: CMakeLists.txt  plat_syspm.c  plat_syspm.h
plat/stm32l412-nucleo/timer_sys/: CMakeLists.txt  timer_sys.c  timer_sys.h
